[workspace]
resolver = "2"
members = ["programs/*", "client"]

[profile.test]
opt-level = 0

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[dev-dependencies]
litesvm = "0.2"
spl-token-2022 = "3.0"
spl-associated-token-account = "3.0"
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-sdk = "2.1"
